@@ -74,6 +74,7 @@
     <File name="Mono.TextEditor/Caret.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor.Highlighting/WorkerThread.cs" subtype="Code" buildaction="Compile" />
     <File name="PythonSyntaxMode.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="AspNetSyntaxMode.xml" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
